ingress.yaml
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: sushiweb-ingress
#spec:
#  ingressClassName: nginx
#  rules:
#    - host: local.sushi
#      http:
#        paths:
#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: sushiweb-service
#                port:
#                  number: 8085  
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sushiweb-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - local.sushi
      secretName: sushi-app-tls
  rules:
    - host: local.sushi
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sushiweb-service
                port:
                  number: 8085
